tests/paczka1/fuzzy1/54532062.err
Error in line 1: A300 A724 23,2
Error in line 27: 10XdBVrFBg A300 41,7
Error in line 30: 9qNVaV6xvkK S862 g8,5
Error in line 31: omBL7owSM A300 87,4
Error in line 33: 9qNVaV6xvkK S862 133,4
